<resources>
    <string name="app_name">Find a Pet Sitter</string>

    <!-- Login Activity strings -->
    <string name="email_text_view">Email Address</string>
    <string name="password_text_view">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_text_view">Don\'t have an account? Sign up</string>
    <string name="error_authentication">Authentication failure</string>
    <string name="error_google_play_services">Google Play Services NOT Available on this device</string>


    <!-- Notification -->
    <string name="notification_pet_sitting_request_title">Pet sitting request from: %s</string>

    <!-- SingUp Activity strings -->
    <string name="toolbar_title_sign_up">Sign Up</string>
    <string name="repeat_password_text_view">Repeat Password</string>
    <string name="full_name_text_view">Full Name</string>
    <string name="save_button">Save</string>
    <string name="error_validation">Validation error</string>
    <string name="error_sign_up">Failed to sign up</string>
    <string name="error_save_profile">Failed to save user profile</string>

    <!-- Pet Owner Home Screen -->
    <string name="page_pet_sitters">Sitters</string>
    <string name="page_nearby_sitters">Nearby Sitters</string>
    <string name="page_requests_sent">Requests Sent</string>

    <!-- Requests Fragment -->
    <string name="request_message_pet_sitter">You got a request from...\n%s</string>
    <string name="request_message_pet_owner">Request sent to %s</string>

    <!-- User Profile Activity -->
    <string name="edit_profile_title">Edit Profile"</string>
    <string name="can_host_pet_checkbox">Available for Pet Sitting ?</string>
    <string name="nick_name_text_view">Nick name</string>
    <string name="description_text_view">Description</string>
    <string name="phone_number_text_view">Phone Number</string>
    <string name="address_text_view">Address</string>
    <string name="zip_code_text_view">Zip Code</string>
    <string name="city_text_view">City</string>
    <string name="state_text_view">State</string>
    <string name="add_pet_button">Add Pet</string>
    <string name="lives_in_title"></string>
    <string name="lives_in_content">Lives in %1$s, %2$s</string>
    <string name="pets_list">Pets:</string>
    <string name="reviews_list">Reviews:</string>
    <string name="write_review_button">Write Review</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_send_request">Send Request</string>
    <string name="menu_save">Save</string>

    <!-- Pet Profile Activity -->
    <string name="pet_profile_title">Edit Pet Profile"</string>
    <string name="name_text_view">Name</string>
    <string name="dog_radio_button">Dog</string>
    <string name="cat_radio_button">Cat</string>
    <string name="breed_text_view">Breed</string>
    <string name="special_needs_text_view">Special Needs</string>

    <!-- Home Activity strings -->
    <string name="recent_visit_text_view">Recently Visited</string>
    <string name="check_in">check in</string>
    <string name="check_out">check out</string>
    <string name="visitor_title"><u>Visitor Information</u></string>
    <string name="pet_name_title">Animal name</string>
    <string name="pet_type">Pet type</string>
    <string name="filter_opeiton">Options</string>

    <!-- Home Menu -->
    <string name="user_profile_title">User Profile</string>
    <string name="nearby_users_title">Nearby Users</string>

    <!-- Navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Spinner -->
    <string-array name="pet_type_array">
        <item>Dog</item>
        <item>Cat</item>
    </string-array>

</resources>
