<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.finalappproject.findapetsitter.activities.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            tools:src="@color/blue" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can_host_pet_checkbox" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name_text_view" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            tools:text="John Doe" />

        <TextView
            android:id="@+id/tvNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_name_text_view" />

        <EditText
            android:id="@+id/etNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="jdoe" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_text_view" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="I love pets, I have 5 dogs and 12 cats\nthey are my family !" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_text_view" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            tools:text="(999) 999-9999" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_text_view" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="9999 Nowhere Pl W\napt  123" />

        <TextView
            android:id="@+id/tvZipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip_code_text_view" />

        <EditText
            android:id="@+id/etZipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="999999" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_text_view" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Some City" />

        <TextView
            android:id="@+id/tvState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_text_view" />

        <EditText
            android:id="@+id/etState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="CA" />

        <Button
            android:id="@+id/btAddPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_pet_button"/>

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</ScrollView>
