<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.finalappproject.findapetsitter.activities.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFullName"
        android:text="@string/full_name_text_view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        tools:text="John Doe"
        android:id="@+id/etFullName" />

    <TextView
        android:text="@string/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="john.doe@email.com"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_below="@+id/tvEmail"
        android:layout_alignStart="@+id/tvEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:text="@string/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="password123"
        android:ems="10"
        android:id="@+id/etPassword"
        android:inputType="textPassword" />

    <TextView
        android:text="@string/repeat_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRepeatPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="repeat123"
        android:id="@+id/etRepeatPassword"
        android:inputType="textPassword" />

    <Button
        android:text="@string/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btSave"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary"
        />

</LinearLayout>
