<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.finalappproject.findapetsitter.activities.UserProfileEditActivity">

    <!-- Toolbar -->
    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.florent37.diagonallayout.DiagonalLayout
                android:id="@+id/diagonalLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                diagonal:diagonal_angle="10"
                diagonal:diagonal_gravity="left">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_profile" />

            </com.github.florent37.diagonallayout.DiagonalLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:elevation="20dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfileImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/circle"
                    android:elevation="20dp"
                    app:civ_border_color="@android:color/transparent"
                    app:civ_border_width="1dp"
                    app:srcCompat="@drawable/ic_person" />

                <CheckBox
                    android:id="@+id/cbPetSitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/etNickName"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/can_host_pet_checkbox" />

                <EditText
                    android:id="@+id/etNickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivProfileImage"
                    android:hint="@string/nick_name_text_view"
                    tools:text="jdoe" />

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etNickName"
                    android:hint="@string/full_name_text_view"
                    android:inputType="textPersonName"
                    tools:text="John Doe" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etFullName"
                    android:hint="Provide a brief description."
                    tools:text="I love pets, I have 5 dogs and 12 cats\nthey are my family !" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etDescription"
                    android:hint="(999) 999-9999"
                    android:inputType="phone"
                    tools:text="(999) 999-9999" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etPhoneNumber"
                    android:hint="@string/address_text_view"
                    tools:text="9999 Nowhere Pl W\napt  123" />

                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etAddress"
                    android:hint="@string/city_text_view"
                    tools:text="Some City" />

                <EditText
                    android:id="@+id/etState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/etCity"
                    android:layout_toEndOf="@id/etCity"
                    android:layout_toRightOf="@id/etCity"
                    android:hint="@string/state_text_view"
                    tools:text="CA" />

                <EditText
                    android:id="@+id/etZipCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/etState"
                    android:layout_toEndOf="@id/etState"
                    android:layout_toRightOf="@id/etState"
                    android:hint="@string/zip_code_text_view"
                    tools:text="999999" />

                <Button
                    android:id="@+id/btAddPet"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_above="@+id/rvPets"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/add_pet_button" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etCity" />

            </RelativeLayout>
        </FrameLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
