<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.finalappproject.findapetsitter.activities.LoginActivity">

    <TextView
        android:text="@string/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:id="@+id/tvEmail"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_marginTop="30dp"
        android:id="@+id/tvPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="password123"
        android:ems="10"
        android:layout_below="@+id/tvPassword"
        android:layout_alignStart="@+id/tvPassword"
        android:id="@+id/etPassword"
        android:inputType="textPassword" />

    <Button
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btLogin" />

    <Button
        android:text="@string/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btLogin"
        android:layout_alignStart="@+id/btLogin"
        android:layout_marginTop="38dp"
        android:id="@+id/btSignUp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="john.doe@email.com"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_below="@+id/tvEmail"
        android:layout_alignStart="@+id/tvEmail"
        android:inputType="textEmailAddress" />
</RelativeLayout>
