<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.finalappproject.findapetsitter.activities.UserProfileEditActivity">

    <!-- Toolbar -->
    <include layout="@layout/toolbar" />

    <com.github.florent37.diagonallayout.DiagonalLayout
        android:id="@+id/diagonalLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:elevation="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        diagonal:diagonal_angle="10"
        diagonal:diagonal_gravity="left">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/cat_profile" />

    </com.github.florent37.diagonallayout.DiagonalLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/circle"
            android:elevation="20dp"
            app:civ_border_color="@android:color/transparent"
            app:civ_border_width="1dp"
            app:srcCompat="@drawable/cat" />

        <Spinner
            android:id="@+id/spPetType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_toLeftOf="@id/ivProfileImage"
            android:layout_toEndOf="@id/ivProfileImage"
            android:layout_above="@+id/etName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfileImage"
            android:hint="@string/name_text_view"
            tools:text="Tiny" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:hint="A brief description about your pet"
            tools:text="Tiny is very friendly and enjoys playing on the grass !" />

        <EditText
            android:id="@+id/etBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/breed_text_view"
            android:layout_below="@+id/etDescription"
            tools:text="Unknown" />

        <EditText
            android:id="@+id/etSpecialNeeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etBreed"
            android:hint="@string/special_needs_text_view"
            tools:text="Allergic to milk" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
